# professionalCMakeExamples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: cat.cpp  cat.hpp  main.cpp
